# question_to_sql

./: .depcheckrc  .dockerignore  .env.example  .envrc  .eslintrc.js  .gitignore  .npmrc  .pylintrc  .tool-versions  Dockerfile  Dockerfile.node  Dockerfile.python  README.md  TODO  cypress.config.ts  fly.toml  node.toml  package-lock.json  package.json  pyproject.toml  python.toml  remix.config.js  server.ts  tsconfig.json  vitest.config.ts
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/node-setup/: action.yml
.github/actions/python-setup/: action.yml
.github/workflows/: deploy.yml  node.yml  python.yml
app/: db.server.ts  entry.client.tsx  entry.server.tsx  functional.ts  root.tsx  session.server.ts  theme.ts  utils.ts
app/components/: PasswordWithStrength.tsx  field.tsx  forms.tsx  sortAndSearchTable.tsx  tableSort.tsx
app/components/admin/: footer.tsx
app/components/dashboard/: consoleSearch.tsx  data-display.tsx  error.tsx  footer.tsx  headerMenu.tsx  landingSearch.tsx  queryFeedback.tsx  question-action-header.tsx  question-box.tsx  question-feedback.tsx  search.tsx  sql-display.tsx
app/lib/: downloader.client.tsx  environment.server.ts  environment.ts  evaluation-question.server.test.ts  evaluation-question.server.ts  history.server.ts  logging.server.ts  python.server.ts  question.server.test.ts  question.server.ts
app/lib/query-runner/: index.ts  postgres.ts  snowflake.ts
app/lib/question/: shell.server.ts
app/models/: generate_schema.ts  query.server.ts  responseError.server.ts  user.server.ts  user_db.server.ts  user_db2.server.ts
app/models/language_model/: base.ts  prompt.server.ts  query_generator.server.ts  trainer.server.ts
app/routes/: footer.tsx  headerMenu.tsx  healthcheck.tsx  hero.tsx  index.tsx  login.tsx  logout.tsx  signup.tsx
app/routes/admin/: $questionGroupId.tsx  index.tsx
app/routes/history/: index.tsx
app/routes/internal/: group.tsx  index.tsx
app/routes/query/: $questionGroupId.tsx  index.tsx
app/routes/query_manager/: all.tsx
app/routes/question/: ($questionId).tsx
cypress/: .eslintrc.js
cypress/e2e/: smoke.cy.ts
cypress/support/: commands.ts  create-user.ts  delete-user.ts  e2e.ts
docker/: build-node.sh  build-python.sh  enable-swap.sh  install-node.sh  install-python.sh  node-build.sh  node-install.sh  node-package.sh  node-release.sh  node-run.sh  python-build.sh  python-install.sh  python-package.sh  python-run.sh  readme.md  run-node.sh  run-python.sh  shared.sh  stubbed-prisma-client-py
docs/: RYANS_TODO  commit.md  mbianco-TODO  prompt_embeddings.md  ranker_model.md  sql_transforms.md
knolbe_py/: cli.py
lib/: sql_enhance.py
mocks/: index.js
prisma/: schema.prisma  seed.ts  test_schema.sql
prisma/migrations/20230113042242_init/: migration.sql
prisma/migrations/20230114182835_add_user_id_to_question_group/: migration.sql
prisma/migrations/20230114190233_add_index_on_user_id_id_question_group_id/: migration.sql
prisma/migrations/20230114190349_fix_compound_index/: migration.sql
prisma/migrations/20230114190441_fix_again/: migration.sql
prisma/migrations/20230114220712_add_fine_tune_name_to_users/: migration.sql
prisma/migrations/20230119214112_initial/: migration.sql
prisma/migrations/20230120174322_add_unique_data_source_fqn_index_on_data_source_table_description/: migration.sql
prisma/migrations/20230120222851_add_row_cardinality_to_data_source_table_column/: migration.sql
prisma/migrations/20230121172438_add_embedding_link_and_embedding_cache/: migration.sql
prisma/migrations/20230121203703_add_value_to_embedding_link/: migration.sql
prisma/migrations/20230121211752_add_index_offset_to_embedding_link/: migration.sql
prisma/migrations/20230121214556_change_unique_to_index_on_content_hash_emedding_link/: migration.sql
prisma/migrations/20230123213754_add_data_source_id_to_embedding_link/: migration.sql
prisma/migrations/20230123220829_rename_faiss_index_on_embedding_link/: migration.sql
prisma/migrations/20230124180226_update_enum_schema/: migration.sql
prisma/migrations/20230128124941_initial/: migration.sql
prisma/migrations/20230209141855_initial/: migration.sql
prisma/migrations/20230211212915_initial/: migration.sql
prisma/migrations/20230223003159_initial/: migration.sql
prisma/migrations/20230223155350_initial/: migration.sql
prisma/migrations/20230228123407_add_unanswered_enum/: migration.sql
python/: answer.py  cli.py  import.py  importer.py  nlp_to_sql.py  prompt.py  server.py  setup.py
python/embeddings/: ann_faiss.py  ann_index.py  ann_search.py  base_embedder.py  embedding.py  embedding_builder.py  embedding_link_index.py  msmacro_embedder.py  msmacro_embeddings.py  openai_embedder.py  openai_embeddings.py
python/prompts/: chat_prompt.py  codex_prompt.py  few_shot.py  few_shot_example.py  prompt.py
python/prompts/few_shot_embeddings/: builder.py  (+1 more)
python/query_runner/: __init__.py  snowflake.py
python/questions/: __init__.py  indexes_and_models.py  llm_openai.py  prompt.py  question_to_sql.py
python/ranker/: column_ranker_model.py  ranker_datamodule.py  ranker_dataset.py  ranker_dataset_generator.py  ranker_model.py  table_ranker_model.py  train.py  training_ranker.py  types.py  values_ranker_model.py
python/schema/: ann_search.py  chat_short_formatter.py  full_schema.py  learned_ranker.py  ranker.py  schema_builder.py  simple_schema_builder.py  simple_schema_migrate.py
python/sql/: exceptions.py  post_transform.py  refs.py  sql_inspector.py  sql_parser.py  sql_resolve_and_fix.py  sql_table_and_columns.py  types.py
python/tests/: answer_test.py  conftest.py  query_test.py  schema_builder_test.py
python/utils/: __init__.py  batteries.py  connections.py  db.py  entropy.py  environments.py  functional.py  indexes_and_models.py  logging.py  multi_bucket_limiter.py  openai.py  openai_rate_limit_throttler.py  openai_rate_throttled.py  query_runner.py  redis.py  sentry.py  sql.py  system.py  tokens.py  torch.py
python/validation/: validator.py
test/: python-mocks.ts  setup-test-env.ts
(+57 files in other folders)
