[tool.poetry]
name = "nlpquery"
version = "0.1.0"
description = ""
authors = ["Ryan Stout <ryanstout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlglot = "^10.4.3"
snowflake-connector-python = "^2.9.0"
prisma-client = "^0.2.1"
prisma = "^0.8.0"
python-decouple = "^3.7"
openai = {extras = ["embeddings"], version = "^0.26.1"}
python-dotenv = "^0.21.0"
ipython = "^8.8.0"
faiss-cpu = "^1.7.3"
xxhash = "^3.2.0"
tiktoken = "^0.1.2"
sentence-transformers = "^2.2.2"
structlog = "^22.3.0"
click = "^8.1.3"
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"
rich = "^13.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"

[tool.black]
line-length=150
target-version=['py39']
exclude = '''
/(
  .venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
sections = "SETUP,FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_setup = "python.setup"