[tool.poetry]
name = "nlpquery"
version = "0.1.0"
description = ""
authors = ["Ryan Stout <ryanstout@gmail.com>"]
readme = "README.md"

# https://stackoverflow.com/questions/51730880/where-do-i-get-a-cpu-only-version-of-pytorch
# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/torch_stable.html"
# secondary = true

[tool.poetry.dependencies]
python = "^3.9"
sqlglot = "^10.4.3"
snowflake-connector-python = "^2.9.0"
python-decouple = "^3.7"
openai = {extras = ["embeddings"], version = "^0.26.1"}
ipython = "^8.8.0"
faiss-cpu = "^1.7.3"
xxhash = "^3.2.0"
tiktoken = "^0.1.2"
sentence-transformers = "^2.2.2"
structlog = "^22.3.0"
click = "^8.1.3"
numpy = "^1.24.1"
backoff = "^2.2.1"
flask = "^2.2.2"
tqdm = "^4.64.1"

# import platform; platform.machine()
# https://download.pytorch.org/whl/torch_stable.html
# https://github.com/KumaTea/pytorch-aarch64
torch = [
  # { version = "1.13.1", "platform" = "linux", markers = "platform_machine == 'aarch64'"},
  { url = "https://github.com/KumaTea/pytorch-aarch64/releases/download/v1.11.0/torch-1.11.0-cp310-cp310-linux_aarch64.whl", "platform" = "linux", markers = "platform_machine == 'aarch64'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp310-cp310-linux_x86_64.whl", "platform" = "linux", markers = "platform_machine == 'x86_64'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1-cp310-none-macosx_11_0_arm64.whl", "platform" = "darwin",  markers = "platform_machine == 'arm64'" }
]
torchvision = [
  # { version = "0.14.1", "platform" = "linux", markers = "platform_machine == 'aarch64'"},
  { url = "https://github.com/KumaTea/pytorch-aarch64/releases/download/v1.11.0/torchvision-0.12.0-cp310-cp310-linux_aarch64.whl", "platform" = "linux", markers = "platform_machine == 'aarch64'"},
  {url = "https://download.pytorch.org/whl/cpu/torchvision-0.14.1%2Bcpu-cp310-cp310-linux_x86_64.whl", "platform" = "linux", markers = "platform_machine == 'x86_64'"},
  {url = "https://download.pytorch.org/whl/cpu/torchvision-0.14.1-cp310-cp310-macosx_11_0_arm64.whl", "platform" = "darwin",  markers = "platform_machine == 'arm64'" }
]

# torch = { version = "*", source = "torchcpu", markers = "sys_platform == 'linux'" }
# torch = "1.13.1+cpu"
# torch = {version = "1.13.1", extras = ["cpu"]}

waitress = "^2.1.2"
sentry-sdk = "^1.14.0"

# use a separate group for prisma stuff to avoid installing *everything*
# in order to generate the prisma bindings
pytest = "^7.2.1"
deepmerge = "^1.1.0"
[tool.poetry.group.prisma.dependencies]
prisma = "^0.8.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"
rich = "^13.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"

[tool.black]
line-length=120
target-version=['py310']
exclude = '''
/(
  .venv
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
sections = "SETUP,FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_setup = "python.setup"