[tool.poetry]
name = "nlpquery"
version = "0.1.0"
description = ""
authors = ["Ryan Stout <ryanstout@gmail.com>"]
readme = "README.md"
# for the `nlp` cli tool, this includes the `python` folder
# packages = [{ include = "python" }]

# TODO update to 3.11 when pytorch supports it https://github.com/pytorch/pytorch/issues/86566
# TODO extract to internal notes before removing
# https://stackoverflow.com/questions/51730880/where-do-i-get-a-cpu-only-version-of-pytorch
# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/torch_stable.html"
# secondary = true

[tool.poetry.dependencies]
# https://github.com/python-poetry/poetry/issues/732
pip = "^23.0.1"
# TODO torch does not support 3.10 yet!
python = "~3.10"
sqlglot = "^10.4.3"
snowflake-connector-python = "^2.9.0"
python-decouple = "^3.7"
openai = { extras = ["embeddings"], version = "^0.26.5" }
ipython = "^8.8.0"
faiss-cpu = "^1.7.3"
xxhash = "^3.2.0"
tiktoken = "^0.1.2"
sentence-transformers = "^2.2.2"
structlog = "^22.3.0"
click = "^8.1.3"
numpy = "^1.24.1"
backoff = "^2.2.1"
flask = "^2.2.3"
tqdm = "^4.64.1"

# TODO in the future we *should* be able to just specify an extra or a wheel source and this is done automatically...
# import platform; platform.machine()
# https://download.pytorch.org/whl/torch_stable.html
# https://github.com/KumaTea/pytorch-aarch64
torch = [
  # { version = "1.13.1", "platform" = "linux", markers = "platform_machine == 'aarch64'"},
  { url = "https://github.com/KumaTea/pytorch-aarch64/releases/download/v1.11.0/torch-1.11.0-cp310-cp310-linux_aarch64.whl", "platform" = "linux", markers = "platform_machine == 'aarch64'" },
  { url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp310-cp310-linux_x86_64.whl", "platform" = "linux", markers = "platform_machine == 'x86_64'" },
  { url = "https://download.pytorch.org/whl/cpu/torch-1.13.1-cp310-none-macosx_11_0_arm64.whl", "platform" = "darwin", markers = "platform_machine == 'arm64'" },
]
torchvision = [
  # { version = "0.14.1", "platform" = "linux", markers = "platform_machine == 'aarch64'"},
  { url = "https://github.com/KumaTea/pytorch-aarch64/releases/download/v1.11.0/torchvision-0.12.0-cp310-cp310-linux_aarch64.whl", "platform" = "linux", markers = "platform_machine == 'aarch64'" },
  { url = "https://download.pytorch.org/whl/cpu/torchvision-0.14.1%2Bcpu-cp310-cp310-linux_x86_64.whl", "platform" = "linux", markers = "platform_machine == 'x86_64'" },
  { url = "https://download.pytorch.org/whl/cpu/torchvision-0.14.1-cp310-cp310-macosx_11_0_arm64.whl", "platform" = "darwin", markers = "platform_machine == 'arm64'" },
]

# torch = { version = "*", source = "torchcpu", markers = "sys_platform == 'linux'" }
# torch = "1.13.1+cpu"
# torch = {version = "1.13.1", extras = ["cpu"]}

waitress = "^2.1.2"
sentry-sdk = { version = "^1.15.0", extras = ["flask"] }

deepmerge = "^1.1.0"
autoflake = "^2.0.1"
prisma = "^0.8.0"
pytorch-lightning = "^1.9.1"
tabulate = "^0.9.0"
pretty-traceback = "^2022.1018"
redis = { extras = ["hiredis"], version = "^4.5.1" }

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
black = "^22.12.0"
isort = "^5.11.4"
pytest = "^7.2.1"
ipdb = "^0.13.11"
pytest-flask = "^1.2.0"
pylint = "^2.16.1"
deptry = "^0.8.0"
rich = "^13.3.1"
vcrpy = "^4.2.1"
pytest-recording = "^0.12.2"
pylint-pytest = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nlp = "python.cli:cli"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARN"
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"
filterwarnings = [
  "ignore::DeprecationWarning:setuptools.*:",
  "ignore::DeprecationWarning:distutils.*:",
  "ignore::DeprecationWarning:faiss.*:",
  "ignore::DeprecationWarning:IPython.*:",
]

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
  .venv
  | node_modules
  | migrations
)/
'''

# when changing this config, you need to restart your vscode isort server
[tool.isort]
profile = "black"
multi_line_output = 3
sections = "SETUP,FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,PRISMA,LOCALFOLDER"
known_setup = "python.setup"
known_prisma = "prisma"


[tool.pyright]
ignore = ["bin/console.py"]
